# CSE-121-Spring-2023

./: .gitignore  README.md
lab1/: README.md
lab1/lab1_2/main/: hello_world_main.c
lab1/lab1_3/: sdkconfig.old
lab1/lab1_3/main/: blink_example_main.c
lab2/: README
lab2/lab2_1/: README.md
lab2/lab2_1_old3/: gdbinit
lab2/lab2_2/main/: lab2_2.c
lab3/: README
lab3/lab3_1/.cache/clangd/index/: lab3_1.c.8559AAAF5A0FFBA6.idx
lab3/lab3_1/main/: lab3_1.c
lab3/lab3_2/: sdkconfig  sdkconfig.old
lab3/lab3_2/.cache/clangd/index/: esp_hid_device_main.c.860C6F172C549256.idx  esp_hid_gap.c.88BC85F9BFCE5356.idx  esp_hid_gap.h.552B2F47C37BEBA9.idx
lab3/lab3_2/main/: ble_hidd_demo_main.c
lab3/lab3_3/main/: CMakeLists.txt  IMU_data.c  IMU_data.h  hid_device_le_prf.c  lab3_3.c
lab4/: README
lab4/lab4_2/main/: lab4_2.c
lab4/lab4_3/main/: CMakeLists.txt  i2c.h  lab4_3.c  lcd.c  lcd.h
lab5/: README-Lab.md  README.md  location  sdkconfig  sdkconfig.old  server.py
lab5/main/: CMakeLists.txt  lab5.c  sensor.c  sensor.h
lab6/: README.md  sdkconfig.old  send  test-morse-output  testInput
lab6/main/: lab6.c
lab7/: CMakeLists.txt  README.md  sdkconfig.old
lab7/main/: CMakeLists.txt  i2c.c  i2c.h  lab7.c  sensor.c
